# cameras_v2

./: CMakeLists.txt  README.md  config.yaml  default_config.yaml  demo_config.yaml  main.cpp  update_cfg.bash
.cache/clangd/index/: camears.cpp.06717F1A4C26F234.idx  cameras.h.5CBDF3E324F189F9.idx  hikcam.hpp.6F659A1FA99FA82F.idx  main.cpp.C1F320AA9BDC9571.idx
include/: cameras.h  hikcam.hpp
src/: camears.cpp
